--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,94 @@
-version: '3.8'
+version: '3'
 
 services:
-  stable-diffusion:
-    build:
-      context: . # This refers to the repository root
-      dockerfile: Dockerfile # Name of the Dockerfile
-    container_name: stable-diffusion
-    command: python /app/scripts/stable_diffusion.py
-    volumes:
-      - .:/app # Mount the current directory into the container
-    ports:
-      - "5000:5000" # Adjust as needed
+  stablediff-cpu:
+    build: 
+      context: .
+      dockerfile: Dockerfile.cpu
+    container_name: stablediff-cpu-runner
     environment:
-      - PYTHONUNBUFFERED=1
-    stdin_open: true
-    tty: true
+      TZ: "Asia/Jakarta"
+      COMMANDLINE_ARGS: "--listen --no-half --skip-torch-cuda-test"
+    entrypoint: ["/bin/sh", "-c"]
+    command: >
+      ". /stablediff.env; echo launch.py $$COMMANDLINE_ARGS;
+      if [ ! -d /stablediff-web/.git ]; then
+        cp -a /sdtemp/. /stablediff-web/
+      fi;
+      if [ ! -f /stablediff-web/models/Stable-diffusion/*.ckpt ]; then
+        echo 'Please copy stable diffusion model to stablediff-models directory'
+        echo 'You may need sudo to perform this action'
+        exit 1
+      fi;
+      python launch.py"
+    ports:
+      - "7860:7860"
+    volumes:
+      - ./stablediff.env:/stablediff.env
+      - ./stablediff-web:/stablediff-web
+      - ./stablediff-models:/stablediff-web/models/Stable-diffusion
+  stablediff-rocm:
+    build: 
+      context: .
+      dockerfile: Dockerfile.rocm
+    container_name: stablediff-rocm-runner
+    environment:
+      TZ: "Asia/Jakarta"
+      ROC_ENABLE_PRE_VEGA: 1
+      COMMANDLINE_ARGS: "--listen --precision full --no-half"
+    entrypoint: ["/bin/sh", "-c"]
+    command: >
+      "rocm-smi; . /stablediff.env; echo launch.py $$COMMANDLINE_ARGS;
+      if [ ! -d /stablediff-web/.git ]; then
+        cp -a /sdtemp/. /stablediff-web/
+      fi;
+      if [ ! -f /stablediff-web/models/Stable-diffusion/*.ckpt ]; then
+        echo 'Please copy stable diffusion model to stablediff-models directory'
+        echo 'You may need sudo to perform this action'
+        exit 1
+      fi;
+      python launch.py"
+    ports:
+      - "7860:7860"
+    devices:
+      - "/dev/kfd:/dev/kfd"
+      - "/dev/dri:/dev/dri"
+    group_add:
+      - video
+    ipc: host
+    cap_add:
+      - SYS_PTRACE
+    security_opt:
+      - seccomp:unconfined
+    volumes:
+      - ./stablediff.env:/stablediff.env
+      - ./stablediff-web:/stablediff-web
+      - ./stablediff-models:/stablediff-web/models/Stable-diffusion
+  stablediff-cuda:
+    build: 
+      context: .
+      dockerfile: Dockerfile.cuda
+    container_name: stablediff-runner-cuda
+    runtime: nvidia
+    environment:
+      TZ: "Asia/Jakarta"
+      NVIDIA_VISIBLE_DEVICES: all
+      COMMANDLINE_ARGS: "--listen"
+    entrypoint: ["/bin/sh", "-c"]
+    command: >
+      "nvidia-smi; . /stablediff.env; echo launch.py $$COMMANDLINE_ARGS;
+      if [ ! -d /stablediff-web/.git ]; then
+        cp -a /sdtemp/. /stablediff-web/
+      fi;
+      if [ ! -f /stablediff-web/models/Stable-diffusion/*.ckpt ]; then
+        echo 'Please copy stable diffusion model to stablediff-models directory'
+        echo 'You may need sudo to perform this action'
+        exit 1
+      fi;
+      python launch.py"
+    ports:
+      - "7860:7860"
+    volumes:
+      - ./stablediff.env:/stablediff.env
+      - ./stablediff-web:/stablediff-web
+      - ./stablediff-models:/stablediff-web/models/Stable-diffusion
