--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,6 @@ services:
     ports:
       - "7860:7860"
     volumes:
-      - C:/docker/stable-diffusion/stablediff-models:/stablediff-models
+      - C:/docker/stable-diffusion/stablediff-models:/stablediff-web/models/Stable-diffusion
       - C:/docker/stable-diffusion/stablediff-web:/stablediff-web
       - ./stablediff.env:/stablediff.env
