--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,16 +1,21 @@
-FROM python:3.10.6-bullseye
+FROM nvidia/cuda:11.3.1-base-ubuntu20.04
 ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1 \
     PYTHONIOENCODING=UTF-8
 WORKDIR /sdtemp
-RUN python -m pip install --upgrade pip wheel
 RUN apt-get update &&\
-    apt-get install -y wget git
+    apt-get install -y \
+    wget \
+    git \
+    python3 \
+    python3-pip \
+    python-is-python3
+RUN python -m pip install --upgrade pip wheel
 RUN git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui /sdtemp
 
 #torch and torchvision version number refer to
 #https://github.com/AUTOMATIC1111/stable-diffusion-webui/blob/master/launch.py
-ENV TORCH_COMMAND="pip install torch==1.12.1+cpu torchvision==0.13.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu"
+ENV TORCH_COMMAND="pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 --extra-index-url https://download.pytorch.org/whl/cu113"
 RUN python -m $TORCH_COMMAND
 
 RUN python launch.py --skip-torch-cuda-test --exit
