--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -3,13 +3,18 @@ ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1 \
     PYTHONIOENCODING=UTF-8
 WORKDIR /sdtemp
-RUN apt-get update &&\
+RUN apt-get update && \
+    apt-get install -y software-properties-common && \
+    add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get update &&\
     apt-get install -y \
     wget \
     git \
-    python3 \
+    python3.9 \
     python3-pip \
     python-is-python3
+RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.9 1
+RUN update-alternatives --config python3
 RUN python -m pip install --upgrade pip wheel
 RUN git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui /sdtemp
 
