--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,28 +1,39 @@
-FROM nvidia/cuda:11.3.1-base-ubuntu20.04
+FROM nvidia/cuda:12.4.1-base-ubuntu20.04
+ARG DEBIAN_FRONTEND=noninteractive
 ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1 \
     PYTHONIOENCODING=UTF-8
 WORKDIR /sdtemp
 RUN apt-get update && \
-    apt-get install -y software-properties-common && \
-    add-apt-repository ppa:deadsnakes/ppa && \
-    apt-get update &&\
+    apt-get upgrade -y && \
     apt-get install -y \
     wget \
-    git \
-    python3.9 \
-    python3-pip \
-    python-is-python3
-RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.9 1
-RUN update-alternatives --config python3
-RUN python -m pip install --upgrade pip wheel
+    build-essential \
+    zlib1g-dev \
+    libncurses5-dev \
+    libgdbm-dev \
+    libnss3-dev \
+    libssl-dev \
+    libreadline-dev \
+    libffi-dev curl \
+    libsqlite3-dev \
+    libbz2-dev \
+    liblzma-dev \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    git && \
+    wget https://www.python.org/ftp/python/3.10.6/Python-3.10.6.tgz && \
+    tar -xvzf Python-3.10.6.tgz && \
+    cd Python-3.10.6 && \
+    ./configure && \
+    make -j $(nproc) && \
+    make install && \
+    cd .. && \
+    rm -rf Python-3.10.6*
 RUN git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui /sdtemp
-
-#torch and torchvision version number refer to
-#https://github.com/AUTOMATIC1111/stable-diffusion-webui/blob/master/launch.py
-ENV TORCH_COMMAND="pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 --extra-index-url https://download.pytorch.org/whl/cu113"
-RUN python -m $TORCH_COMMAND
-
-RUN python launch.py --skip-torch-cuda-test --exit
-RUN python -m pip install opencv-python-headless
+RUN python3 -m pip install --upgrade pip wheel
+RUN python3 -m pip install insightface
+ENV TORCH_COMMAND="pip install torch==2.4.0 torchvision==0.19.0 xformers --extra-index-url https://download.pytorch.org/whl/cu121"
+RUN python3 -m $TORCH_COMMAND
+RUN python3 launch.py --skip-torch-cuda-test --exit
 WORKDIR /stablediff-web
