--- a/stablediff.env
+++ b/stablediff.env
@@ -1,1 +1,2 @@
-export COMMANDLINE_ARGS="--listen --lowvram"
+export PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True
+export COMMANDLINE_ARGS="--listen --api --no-half --lowvram --xformers --enable-insecure-extension-access"
