--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,25 @@
-
-version: '3'
-
 services:
-  stablediff-gpu:
-    build:
+  stablediff-cuda:
+    build: 
       context: .
-      dockerfile: Dockerfile.gpu
-    container_name: stablediff-gpu-runner
+      dockerfile: Dockerfile.cuda
+    container_name: stablediff-cuda-runner
+    restart: unless-stopped
+    runtime: nvidia
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
     environment:
       TZ: "America/New_York"
-      COMMANDLINE_ARGS: "--listen --lowvram"
+      NVIDIA_VISIBLE_DEVICES: all
+      COMMANDLINE_ARGS: "--listen"
     entrypoint: ["/bin/sh", "-c"]
     command: >
-      ". /stablediff.env; echo launch.py $$COMMANDLINE_ARGS;
+      "nvidia-smi; . /stablediff.env; echo launch.py $$COMMANDLINE_ARGS;
       if [ ! -d /stablediff-web/.git ]; then
         cp -a /sdtemp/. /stablediff-web/
       fi;
@@ -21,10 +28,13 @@ services:
         echo 'You may need sudo to perform this action'
         exit 1
       fi;
-      python launch.py"
+      python3 launch.py"
     ports:
       - "7860:7860"
     volumes:
-      - /home/stable-diffusion/models:/stablediff-web/models/Stable-diffusion
-      - /home/stable-diffusion/web:/stablediff-web
       - /home/stable-diffusion/stablediff.env:/stablediff.env
+      - /home/stable-diffusion/stablediff-web:/stablediff-web
+      - /home/stable-diffusion/stablediff-models:/stablediff-web/models/Stable-diffusion
+#      - ./controlnet-models:/stablediff-web/models/ControlNet
+#      - ./lora-models:/stablediff-web/models/Lora
+#      - ./outputs:/stablediff-web/outputs
